// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot (with error) 1`] = `
<div>
  <InputGroup
    size="sm"
    tag="div"
  >
    <InputGroupAddon
      addonType="prepend"
      tag="div"
    >
      label
    </InputGroupAddon>
    <Input
      type="text"
    />
  </InputGroup>
  <span
    className="error"
  >
    <Component />
  </span>
</div>
`;

exports[`Input matches snapshot 1`] = `
<div>
  <InputGroup
    size="sm"
    tag="div"
  >
    <InputGroupAddon
      addonType="prepend"
      tag="div"
    >
      label
    </InputGroupAddon>
    <Input
      type="text"
    />
  </InputGroup>
</div>
`;
